--- a/content/index.html
+++ b/content/index.html
@@ -153,7 +153,7 @@ img.add_border {
 <p style="padding-left: 30px;"><a _msthash="170597" _msttexthash="16739931" href="https://www.uts.edu.au/research-and-teaching/learning-and-teaching/scholarship-and-research/scholarship-learning-and-teaching/developing-academic-portfolio">https://www.uts.edu.au/research-and-teaching/learning-and-teaching/scholarship-and-research/scholarship-learning-and-teaching/developing-academic-portfolio</a></p>
 <p _msthash="170598" _msttexthash="3034824351" style="padding-left: 60px;">作品集通過創建您隨著時間的推移的反思（反思），發展（開發，拓展）和成就（成果，成就）的記錄來支援您作為學者的角色。您可能希望使用投資組合的各個方面（面向）為正式試用期審查，進步（進展）或晉陞（升職）過程提供證據（證據）。</p>
 <p style="padding-left: 30px;"><a _msthash="170599" _msttexthash="2167867" href="https://www.hr.uwa.edu.au/working/academic/portfolio">https://www.hr.uwa.edu.au/working/academic/portfolio</a></p>
-<p _msthash="170600" _msttexthash="1314791179" style="padding-left: 60px;">學術作品集是你的主要活動和成就（成果）的摘要，記錄了你貢獻的性質和程度，以及你的角色和成就。它有三個主要組成部分（或作品集），由您的簡歷（CV）支援。</p>
+<p _msthash="170600" _msttexthash="1314791179" style="padding-left: 60px;">學術作品集是你的主要活動和成就（成果）的摘要，記錄了你貢獻的性質和程度，以及你的角色和成就。它有三個主要組成部分（或作品集），由您的簡歷（CV）支援</p>
 <p _msthash="170601" _msttexthash="557519885" style="padding-left: 60px;">這裡指的三項學術歷程檔案， 即教學 （包括教課與學習）， 研究 （research） 與服務等三項工作內容的組合.</p>
 <p _msthash="170602" _msttexthash="301039388" style="padding-left: 60px;">教學 - 課程內容有沒有與時俱進， 逐步提升內容與教學方法， 以符合時代要求.</p>
 <p _msthash="170603" _msttexthash="276423329" style="padding-left: 60px;">研究 - 對於所開設的課程或與業界相關的研究主題， 是否持續鑽研探究.</p>
@@ -164,12 +164,11 @@ img.add_border {
 <p _msthash="170608" _msttexthash="14025372855" style="padding-left: 60px;">成功管理學術作品集需要持續（持續）協作（協同）和使用數據。有許多利益相關者參與這個過程，強調合作的重要性不僅有助於投資組合管理，而且有助於機構的使命（使命）和願景（願景）。機構和學術領導者可以協調有關戰略活動和資訊管理的對話，以加強長期的學術規劃。<br _istranslated="1"/>此外，隨著領導者審查計劃級成本和數據作為學術投資組合管理的一部分，他們將能夠確定重新分配資金以支持資源密集型學術計劃<br _istranslated="1"/>的機會。更好地訪問這些數據還將提高學習，進步和畢業成果的可見性。隨著學術領導與教師之間關係和協作的加強，決策（決策）、資源分配（資源配置）和數據分析將得到改善。</p>
 <p _msthash="170609" _msttexthash="118030328">這是計算機程式課程 2021 Fall 的作業倉儲與網站 template</p>
 <hr/>
-<p _msthash="170703" _msttexthash="39332137">demo 學號與帳號： mdecourse</p>
-<p _msthash="170704" _msttexthash="22005152">網站倉儲： <a _istranslated="1" href="https://github.com/mdecourse/cp2021_hw">https://github.com/mdecourse/cp2021_hw</a></p>
-<p _msthash="170705" _msttexthash="24646882">網站連結： <a _istranslated="1" href="https://mde.tw/cp2021_hw">https://mde.tw/cp2021_hw</a></p>
+<p _msthash="170703" _msttexthash="39332137">41023238</p>
+<p _msthash="170704" _msttexthash="22005152">網站倉儲： <a href="https://github.com/41023238/cp2021_hw">https://github.com/41023238/cp2021_hw</a> </p>
+<p _msthash="170705" _msttexthash="24646882">網站連結： <a href="https://41023238.github.io/cp2021_hw/">https://41023238.github.io/cp2021_hw/</a></p>
 <p _msthash="170706" _msttexthash="111814209">其他與個人或作業相關資料說明或介紹：</p>
-<p _msthash="170707" _msttexthash="59362966">mdecourse 所屬的實驗室： <a _istranslated="1" href="https://mde.tw">https://mde.tw</a></p>
-<br /> <a href='portable_hybrid.html'>Next</a> >> portable_hybrid</div>
+<p _msthash="170707" _msttexthash="59362966">mdecourse 所屬的實驗室： <a _istranslated="1" href="https://mde.tw">https://mde.tw</a></p><br /> <a href='portable_hybrid.html'>Next</a> >> portable_hybrid</div>
         
     <!-- footer -->
       <div class="container">
